--- a/TicTacToe.Common/TicTacToe.Common.csproj
+++ b/TicTacToe.Common/TicTacToe.Common.csproj
@@ -42,8 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Game.cs" />
+    <Compile Include="Entities\Move.cs" />
+    <Compile Include="Entities\Agent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
