--- a/TicTacToe.Common/TicTacToe.Common.csproj
+++ b/TicTacToe.Common/TicTacToe.Common.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Entities\Move.cs" />
     <Compile Include="Entities\Agent.cs" />
+    <Compile Include="Entities\Player.cs" />
     <Compile Include="Enums\Symbols.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
