--- a/TicTacToe.Common/TicTacToe.Common.csproj
+++ b/TicTacToe.Common/TicTacToe.Common.csproj
@@ -32,8 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\GamePlay.cs" />
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Entities\Move.cs" />
     <Compile Include="Entities\Agent.cs" />
@@ -49,6 +54,7 @@
     <Compile Include="Enums\Symbols.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\IntelligentMoveDecider.cs" />
     <Compile Include="Utilities\Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
