--- a/TicTacToe.WPF/TicTacToe.WPF.csproj
+++ b/TicTacToe.WPF/TicTacToe.WPF.csproj
@@ -54,6 +54,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\CheckWinner.cs" />
+    <Compile Include="ViewModel\GameManipulation.cs" />
+    <Compile Include="View\InitGameBoard.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -99,5 +102,6 @@
       <Name>TicTacToe.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
