--- a/TicTacToe.Common/TicTacToe.Common.csproj
+++ b/TicTacToe.Common/TicTacToe.Common.csproj
@@ -51,9 +51,11 @@
     <Compile Include="Entities\Move.cs" />
     <Compile Include="Entities\Agent.cs" />
     <Compile Include="Entities\Player.cs" />
+    <Compile Include="Enums\Players.cs" />
     <Compile Include="Enums\Symbols.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\IntelligenceLevels.cs" />
     <Compile Include="Utilities\IntelligentMoveDecider.cs" />
     <Compile Include="Utilities\Randomizer.cs" />
   </ItemGroup>
